accessibility banner font fix. blurring images for better seo

--- a/client/styles/components/banner.module.scss
+++ b/client/styles/components/banner.module.scss
@@ -20,10 +20,6 @@
 }
 
 .content {
-    *:not(a):not(.button) {
-        text-shadow: 1px 1px 2px $background-900;
-    }
-
     text-align: center;
     padding-top: $single;
 }
